updated CourseController status code for getAllCourses() when it returns empty array.